# build-systems

bazel/dynlib/: BUILD
bazel/executable/: BUILD
bazel/statlib/: BUILD
buck/dynlib/: BUCK  DynamicLibrarySource.cpp
buck/executable/: BUCK  ExecutableSource.cpp
buck/statlib/: BUCK
cmake/: CMakeLists.txt
cmake/dynlib/: CMakeLists.txt
cmake/executable/: CMakeLists.txt
cmake/statlib/: CMakeLists.txt
fastbuild/: fbuild.bff
fastbuild/dynlib/: dynlib.bff
fastbuild/executable/: executable.bff
fastbuild/statlib/: statlib.bff
make/: Makefile
make/dynlib/: Makefile
make/executable/: Makefile
make/statlib/: Makefile
msbuild/: build.bat  build.xml
msbuild/dynlib/: DynamicLibraryHeader.h
premake/: premake5.lua
premake/dynlib/: premake5.lua
premake/executable/: premake5.lua
premake/statlib/: premake5.lua
scons/: SConstruct
scons/dynlib/: SConscript
scons/executable/: SConscript
scons/statlib/: SConscript
waf/: wscript
waf/dynlib/: wscript
waf/executable/: wscript
waf/statlib/: wscript
